# BrewMatch

./: .coc-sync-marker  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ENTERPRISE_BRIEF.md  LICENSE  README.md  REPORT.md  SECURITY.md  app.py  conftest.py  pyproject.toml  render.yaml  requirements.txt
.claude/: .coc-obsoleted  .coc-sync-marker  VERSION  settings.json
.claude/agents/: cc-architect.md  cli-orchestrator.md  codex-architect.md  gemini-architect.md  open-source-strategist.md  value-auditor.md
.claude/commands/: ai.md  analyze.md  api.md  autonomize.md  cc-audit.md  cli-audit.md  codify.md  db.md  deploy.md  design.md  i-audit.md  i-harden.md  i-polish.md  implement.md  journal.md  learn.md  migrate.md  posture.md  redteam.md  release.md  sdk.md  start.md  sweep.md  sync.md  test.md  todos.md  validate.md  wrapup.md  ws.md
.claude/hooks/: auto-format.js  coc-drift-warn.js  detect-package-manager.js  detect-violations.js  enforce-framework-first.js  gitignored-claude-warn.js  integration-hygiene.js  log-triage-gate.js  posture-gate.js  pre-commit-branch-scope.js  pre-compact.js  session-end.js  session-start.js  stop.js  user-prompt-rules-reminder.js  validate-bash-command.js  validate-deployment.js  validate-prod-deploy.js  validate-workflow.js
.claude/rules/: agent-reasoning.md  agents.md  artifact-flow.md  autonomous-execution.md  build-repo-release-discipline.md  cc-artifacts.md  ci-runners.md  coc-sync-landing.md  communication.md  connection-pool.md  cross-cli-artifact-hygiene.md  cross-cli-parity.md  dataflow-classification.md  dataflow-identifier-safety.md  dataflow-pool.md  dependencies.md  deploy-hygiene.md  deployment.md  e2e-god-mode.md  eatp.md  env-models.md  event-payload-classification.md  facade-manager-detection.md  framework-first.md  git.md  hook-output-discipline.md  independence.md  infrastructure-sql.md  journal.md  nexus-http-status-convention.md  nexus-webhook-hmac.md  observability.md  orphan-detection.md  pact-governance.md  patterns.md  probe-driven-verification.md  python-environment.md  recommendation-quality.md  refactor-invariants.md  repo-scope-discipline.md  (+18 more)
.claude/test-harness/: README.md
.claude/wrappers/: ai.sh.template  analyze.sh.template  api.sh.template  cc-audit.sh.template  codify.sh.template  db.sh.template  deploy.sh.template  design.sh.template  i-audit.sh.template  i-harden.sh.template  i-polish.sh.template  implement.sh.template  inspect.sh.template  journal.sh.template  learn.sh.template  redteam.sh.template  release.sh.template  repos.sh.template  sdk.sh.template  settings.sh.template  start.sh.template  sync-to-build.sh.template  sync.sh.template  test.sh.template  todos.sh.template  validate.sh.template  wrapup.sh.template  ws.sh.template
.github/: CODEOWNERS  coc-sdk-refs-allowlist.txt  dependabot.yml
.github/workflows/: auto-merge.yml  keep-brain-awake.yml  validate.yml
.streamlit/: config.toml
api/: auth.py  main.py
apps/web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
data/recipes/: bh-kalita-easy.json  bh-kalita-full-body.json  bh-origami-versatile.json  bh-v60-chocolate-nut.json  bh-v60-foundation.json  bh-v60-fruit-forward.json  bh-v60-sweet-spot.json  bh-v60-tea-like.json  dark-kalita-bold.json  dark-origami-smooth.json  dark-v60-chocolate.json  hoffmann-v60-classic.json  hoffmann-v60-dark-roast.json  hoffmann-v60-high-extraction.json  hoffmann-v60-light-delicate.json  hoffmann-v60-strong.json  honey-kalita-sweet.json  kalita-classic-flat.json  kalita-wave-bright.json  kalita-wave-decaf.json  kalita-wave-honey.json  kalita-wave-rich.json  kasuya-4-6-bold.json  kasuya-4-6-bright.json  kasuya-4-6-kalita.json  kasuya-4-6-v60.json  lance-kalita-dark.json  lance-kalita-simple.json  lance-origami-hybrid.json  lance-v60-april.json  lance-v60-high-ratio.json  lance-v60-medium.json  lance-v60-switch.json  natural-v60-fruity.json  onyx-kalita-thick.json  onyx-origami-natural.json  onyx-v60-accent.json  onyx-v60-monarch.json  origami-classic-cone.json  origami-experimental-5pour.json  (+6 more)
deploy/: Dockerfile.template  docker-compose.dev.yml.template  docker-compose.prod.yml.template  nginx-spa.conf.template
deploy/scripts/: deploy.sh.template  dev.sh.template  promote.sh.template  stage.sh.template
mcp-configs/: README.md  kailash-dev.json  kailash-full.json  kailash-minimal.json
models/: convergence_curves.json  evaluation_results.json  feature_encoder.joblib  feature_importance.json  learning_curves.json  personalization_curves.json  taste_predictor.joblib  test_predictions.csv  training_metadata.json
scripts/: README.md  check-manifest-parity.sh  evaluate_pipeline.py  generate_recipes.py  migrate.py  seed_demo.py  train_model.py  validate_recipes.py
scripts/ci/: run-all.js  validate-agents.js  validate-commands.js  validate-hooks.js  validate-rules.js  validate-skills.js
scripts/deployment/: README.md  deploy-tenant.sh  setup-github-projects.sh  teardown-databases.sh
scripts/development/: README.md  check-status.sh  reset-development.sh  setup-databases.sh  setup-environment.sh  start-development.sh  stop-development.sh
scripts/learning/: digest-builder.js  observation-logger.js
scripts/maintenance/: README.md  consolidate-outputs.py  fix-hardcoded-paths.py  fix-imports.py  refactor-pythoncode-to-functions.py  refactor-pythoncode.py
scripts/metrics/: README.md  daily-metrics.sh  examples.sh  feature-tracker.sh  github-metrics.sh  metrics  test-coverage-tracker.sh  weekly-summary.sh
scripts/plugin/: build-plugin.js  post-install.js  pre-install.js  pre-uninstall.js
specs/: _index.md  bean-extraction.md  coffee-science.md  data-models.md  evaluation.md  personalization.md  recipe-optimization.md  recipe-retrieval.md  synthetic-data.md  taste-prediction.md  user-interface.md
src/: brewer_catalog.py  data_models.py  grinder_catalog.py
src/app/: app.py  auth.py  db.py  utils.py
src/bean_extractor/: __init__.py  extractor.py
tests/: conftest.py
tools/: lint-workspaces.js
workspaces/: CLAUDE.md  README.md
(+812 files in other folders)
