[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewmatch"
version = "0.1.0"
description = "Coffee troubleshooting tool — diagnosis-first pour-over recommendations with ML"
authors = [
    {name = "BrewMatch Team"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "shap>=0.45.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "bcrypt>=4.0.0",
    "streamlit-cookies-manager>=0.2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Verifies Supabase-issued login tokens (Goal C). [crypto] pulls in the
    # cryptography backend for asymmetric (RS256/ES256) project signing keys;
    # HS256 shared-secret verification needs no extra backend.
    "PyJWT[crypto]>=2.8.0",
]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    # Embedded PostgreSQL for the restart-survival regression test: bundles its
    # own Postgres binary and runs a disposable instance per test run, so the
    # test exercises the real Postgres path without Docker or a system install.
    "pgserver>=0.1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "regression: Regression tests guarding against re-introduction of fixed bugs",
    "integration: Tests that run against real infrastructure (e.g. a real PostgreSQL server)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
